Install miragejs and modify other things

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "project",
+  "name": "Vans Life",
   "dependencies": {
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.3"
   },
   "devDependencies": {
-    "vite": "latest",
-    "@vitejs/plugin-react": "*"
+    "@vitejs/plugin-react": "*",
+    "miragejs": "^0.1.47",
+    "vite": "latest"
   },
   "scripts": {
     "start": "vite",
